fix: collapse (wip)

--- a/assets/sass/pages/editTrick.scss
+++ b/assets/sass/pages/editTrick.scss
@@ -48,11 +48,11 @@
     padding: 0px !important;
   }
 
-  #mediaTricks {
+  #mediaEditTrick {
     display: none !important;
   }
 
-  #seeMedias {
+  #seeEditMedias {
     display: block !important;
   }
 
